@@ -255,88 +255,7 @@ rpm	alias --deb:md5sums --qf '\
 	--POPTdesc=$"display debian/md5sums manifest"
 
 #==============================================================================
-rpm	alias --yum:primary.xml --qf '\
-<package type="rpm">\
-\n  <name>%{NAME:cdata}</name>\
-\n  <arch>%{ARCH:cdata}</arch>\
-\n  <version epoch="%|EPOCH?{%{EPOCH}}:{0}|" ver="%{VERSION:cdata}" rel="%{RELEASE:cdata}"/>\
-\n  <checksum type="sha" pkgid="NO">%|HDRID?{%{HDRID}}:{XXX}|</checksum>\
-\n  <summary>%{SUMMARY:cdata}</summary>\
-\n  <description>%{DESCRIPTION:cdata}</description>\
-\n  <packager>%|PACKAGER?{%{PACKAGER:cdata}}:{}|</packager>\
-\n  <url>%|URL?{%{URL:cdata}}:{}|</url>\
-\n  <time file="%{PACKAGETIME}" build="%{BUILDTIME}"/>\
-\n  <size package="%{PACKAGESIZE}" installed="%{SIZE}" archive="%{ARCHIVESIZE}"/>\
-\n  <location %|PACKAGEBASEURL?{xml:base=\"%{PACKAGEBASEURL:cdata}\" }|href="%{PACKAGEORIGIN:bncdata}"/>\
-\n  <format>\
-%|license?{\
-\n    <rpm:license>%{LICENSE:cdata}</rpm:license>\
-}:{\
-\n    <rpm:license/>\
-}|\
-%|vendor?{\
-\n    <rpm:vendor>%{VENDOR:cdata}</rpm:vendor>\
-}:{\
-\n    <rpm:vendor/>\
-}|\
-%|group?{\
-\n    <rpm:group>%{GROUP:cdata}</rpm:group>\
-}:{\
-\n    <rpm:group/>\
-}|\
-%|buildhost?{\
-\n    <rpm:buildhost>%{BUILDHOST:cdata}</rpm:buildhost>\
-}:{\
-\n    <rpm:buildhost/>\
-}|\
-%|sourcerpm?{\
-\n    <rpm:sourcerpm>%{SOURCERPM:cdata}</rpm:sourcerpm>\
-}|\
-\n    <rpm:header-range start="%{HEADERSTARTOFF}" end="%{HEADERENDOFF}"/>\
-%|providename?{\
-\n    <rpm:provides>\
-[\
-\n      %{providexmlentry}\
-]\
-\n    </rpm:provides>\
-}:{\
-\n    <rpm:provides/>\
-\n}|\
-%|requirename?{\
-\n    <rpm:requires>\
-[\
-\n      %{requirexmlentry}\
-]\
-\n    </rpm:requires>\
-}:{\
-\n    <rpm:requires/>\
-}|\
-%|conflictname?{\
-\n    <rpm:conflicts>\
-[\
-\n      %{conflictxmlentry}\
-]\
-\n    </rpm:conflicts>\
-}:{\
-\n    <rpm:conflicts/>\
-}|\
-%|obsoletename?{\
-\n    <rpm:obsoletes>\
-[\
-\n      %{obsoletexmlentry}\
-]\
-\n    </rpm:obsoletes>\
-}:{\
-\n    <rpm:obsoletes/>\
-}|\
-%|filesxmlentry1?{\
-[\
-\n    %{filesxmlentry1}\
-]\
-}|\
-\n  </format>\
-\n</package>\
-\n' \
+rpm	alias --yum:primary.xml --qf @USRLIBRPM@/qf/yum_primary_xml
 	--POPTdesc=$"display yum primary.xml markup"
 
 rpm	alias --yum:primary.sqlite --qf "\
@@ -474,16 +393,7 @@ Package:\
 \n'\
 	--POPTdesc=$"display yum primary.yaml markup"
 
-rpm	alias --yum:filelists.xml --qf '\
-<package pkgid="%|HDRID?{%{HDRID}}:{XXX}|" name="%{NAME:cdata}" arch="%{ARCH:cdata}">\
-\n  <version epoch="%|EPOCH?{%{EPOCH}}:{0}|" ver="%{VERSION:cdata}" rel="%{RELEASE:cdata}"/>\
-%|filesxmlentry2?{\
-[\
-\n  %{filesxmlentry2}\
-]\
-}|\
-\n</package>\
-\n' \
+rpm	alias --yum:filelists.xml --qf @USRLIBRPM@/qf/yum_filelists_xml
 	--POPTdesc=$"display yum filelists.xml markup"
 
 rpm	alias --yum:filelists.sqlite --qf "\
@@ -516,18 +426,7 @@ Filelists:\
 \n' \
 	--POPTdesc=$"display yum filelists.yaml markup"
 
-rpm	alias --yum:other.xml --qf '\
-<package pkgid="%|HDRID?{%{HDRID}}:{XXX}|" name="%{NAME:cdata}" arch="%{ARCH:cdata}">\
-\n  <version epoch="%|EPOCH?{%{EPOCH}}:{0}|" ver="%{VERSION:cdata}" rel="%{RELEASE:cdata}"/>\
-%|changelogname?{\
-[\
-\n  <changelog author="%{CHANGELOGNAME:cdata}" date="%{CHANGELOGTIME}">%{CHANGELOGTEXT:cdata}</changelog>\
-]\
-}:{\
-\n  <changelog/>\
-}|\
-\n</package>\
-\n' \
+rpm	alias --yum:other.xml --qf @USRLIBRPM@/qf/yum_other_xml
 	--POPTdesc=$"display yum other.xml markup"
 
 rpm	alias --yum:other.sqlite --qf "\
